# AoC2024

./: .gitignore  CMakeLists.txt  README.md  index.html
Day01_Historian_Hysteria/: Makefile  main.cpp
Day03_Mull_It_Over/: main.cpp
Day04_Ceres_Search/: main.cpp  temp.cc
Day05_Print_Queue/: main.cpp
Day06_Guard_Gallivant/: CMakeLists.txt  point.cpp
Day07_Bridge_Repair/: main.cpp  main.py
Day08_Resonant_Collinearity/: main.cpp
Day09_Disk_Fragmenter/: CMakeLists.txt  main.cpp  main.py  main2.py  main3.py  make_gif.py
Day10_Hoof_It/: main.cpp  vis.py
Day11_Plutonian_Pebbles/: CMakeLists.txt  main.c  main.cpp  numDigits.cpp
Day2_Red-Nosed_Reports/: Makefile  main.cpp
Day5_Print_Queue/: main.cpp
Day6_Guard_Gallivant/: guard.cpp  guard.h  main.cpp  point.h
Day7_Bridge_Repair/: CMakeLists.txt  main.cpp  util.h
Day9_Disk_Fragmenter/: CMakeLists.txt  main.cpp
